# five-in-line

./: .gitignore  CMakeLists.txt  ProjectHome.md  ThreadProcessor.h  f5_solve.bat  f5_solve.sh  f5_spawn.bat  f5_spawn.sh  gen_one_state.bat  gomoku.aps  gomoku.h  gomoku.rc  gomoku.vcproj  gomokuDlg.h  mfc_field.cpp  process_solve.bat  stdafx.cpp  stdafx.h
algo/: algo_utils.h  check_player.cpp  check_player.h  env_variables.h  field.cpp  field.h  field_xml.cpp  field_xml.h  game.cpp  game.h  game_xml.h  gomoku_exceptions.cpp  gomoku_exceptions.h  primitives.h  step.h  wsplayer.cpp  wsplayer.h  wsplayer_common.cpp  wsplayer_common.h  wsplayer_common.inl  wsplayer_node.cpp  wsplayer_node.h  wsplayer_treat.cpp  wsplayer_treat.h
db/: Makefile  bin_index.cpp  bin_index.h  bin_index_solution_base.cpp  bin_index_solution_base.h  bin_index_utils.cpp  bin_index_utils.h  db.cpp  db.sln  db.vcproj  ibin_index.h  ifile_access.h  mysql_solution_base.cpp  mysql_solution_base.h  paged_file_access.cpp  paged_file_access.h  regular_file_access.cpp  regular_file_access.h  run_php.sh  solution_tree.cpp  solution_tree.h  solution_tree_fix_zero_fails.cpp  solution_tree_fix_zero_fails.h  solution_tree_fixes.cpp  solution_tree_fixes.h  solution_tree_utils.cpp  solution_tree_utils.h  test.cpp
db/cmake/: CMakeLists.txt
doc/: f5_freebsd_src.txt  f5_ubuntu.txt  f5_win.txt  habr.html  habr.txt
gis/: mfcCanvas.cpp
gui/: CMakeLists.txt  DlgResizeHelper.cpp  InterractivePlayers.cpp  InterractivePlayers.h  ThreadProcessor.cpp  ThreadProcessor.h  gomoku.cpp  gomoku.h  gomoku.rc  gomoku.sln  gomoku.vcproj  gomokuDlg.cpp  gomokuDlg.h  mfc_field.h  resource.h  stdafx.h
gui/cmake/: CMakeLists.txt
gui/gis/: mfcCanvas.h
gui/res/: gomoku.rc2  tb.pdn  tb_dis.pdn
qtgui/: fieldwidget.cpp  fieldwidget.h  interractive_players.cpp  interractive_players.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtgui.pro  qtgui_res.qrc
solver/: Makefile  Makefile.nolib  Makefile.ubuntu  main.cpp  solve.sh  solver.sln  solver.vcproj
solver/cmake/: CMakeLists.txt
tests/: avl_tree_tests.cpp  find_lines.cpp  loose.gm  mysql_tests.cpp  self_play.gm  solver.cpp  tests.sln  tests.vcproj  ttt.gm
tests/cmake/: CMakeLists.txt
tests/find_lines/: find_lines.cpp  find_lines.h
tests/gtest/: gtest_main.cc
tests/include/: main.h
tests/src/: main.cpp
www/: index.htm  index.php  solve.php  ubuntu.txt
www/etc/nginx/sites-available/: fiveinline.info
www/sql/: analyze_tables.sh  copy_old_database.php  delete_content.sh  f5.sql  mysql_f5.sql  mysql_tables.sh  optimize_tables.sh  rerelax.php
www/var/www/cron/: stat.php
www/var/www/fiveinline/: index.php
www/var/www/fiveinline/solutions/: explore_state.inc  index.inc  mark_state.inc  solve.inc  stat.inc
www/var/www/fiveinline/solutions/root/: explore_state.php  index.php  mark_state.php  solve.php  stat.php
www/var/www/fiveinline/solutions/v14/: index.php  solve.php  stat.php
www/var/www/fiveinline/solutions/v322/: index.php  solve.php  stat.php
